@@ -8,9 +8,9 @@ import org.bot.nullbot.annotation.CommandMapping;
 import org.bot.nullbot.command.Command;
 import org.bot.nullbot.entity.CommandEvent;
 import org.bot.nullbot.component.game.MatchService;
+import org.bot.nullbot.service.game.TicTacToeService;
 import org.springframework.stereotype.Component;
 
-import java.time.format.DateTimeFormatter;
 
 @CommandMapping({"Action", "行动"})
 @Component
@@ -18,26 +18,35 @@ import java.time.format.DateTimeFormatter;
 @Slf4j
 public class ActionCommand implements Command
 {
-    private static final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("HH:mm:ss");
-
-    private final MatchService matchService;
+    private final TicTacToeService ticTacToeService;
 
     @Override
     public void execute(Bot bot, CommandEvent<?> event) {
         if (event.getEvent() instanceof GroupMessageEvent groupMessageEvent) {
-            if(!event.getCommandParameters().isEmpty()){
+            if(event.getCommandParameters().size() == 2) {
                 Long groupId = groupMessageEvent.getGroupId();
                 Long userId = groupMessageEvent.getUserId();
                 String userName = bot.getStrangerInfo(userId, false).getData().getNickname();
                 Long selfId = bot.getSelfId();
 
-                String action = event.getCommandParameters().getFirst();
-                // String result = handleAction(groupId, userId, userName, action);
-                // bot.sendGroupMsg(groupMessageEvent.getGroupId(), result, false);
-                // log.info("\t\t\t\t├─[Action]  动作结果 - {}", result.replaceAll("\\R", ""));
+                int x = 0;
+                int y = 0;
+
+                try {
+                    x = Integer.parseInt(event.getCommandParameters().get(0));
+                    y = Integer.parseInt(event.getCommandParameters().get(1));
+                } catch (NumberFormatException e) {
+                    bot.sendGroupMsg(groupMessageEvent.getGroupId(), "[行动] ❌参数类型错误", false);
+                    log.info("\t\t\t\t├─[Action] 参数类型错误");
+                    return;
+                }
+
+                String result = ticTacToeService.move(userId, x, y);
+                bot.sendGroupMsg(groupMessageEvent.getGroupId(), result, false);
+                log.info("\t\t\t\t├─[Action]  动作结果 - {}", result.replaceAll("\\R", ""));
             }else{
-                bot.sendGroupMsg(groupMessageEvent.getGroupId(), "[行动] ❌无行动参数", false);
-                log.info("\t\t\t\t├─[Action] 无行动参数");
+                bot.sendGroupMsg(groupMessageEvent.getGroupId(), "[行动] ❌参数数量错误", false);
+                log.info("\t\t\t\t├─[Action] 参数数量错误");
             }
         }else
             log.info("\t\t\t\t├─[Action] 未设计 - 非群消息事件响应方式");
